# Trust-Me-Bro

./: .gitignore  README.md  flake.nix  gpt5_storage.csv  launcher.py  port_map.txt  requirements.txt  rust-toolchain.toml  tui.py  utils.py
client/: client.py  tui.py
llm-server/: load_balancer.py  main.go  metrics_analyzer  metrics_analyzer.c  server.py  test.md
tmb-server/: CMakeLists.txt  GPT-5_storage.csv  a_storage.csv  b_storage.csv  gpt5_storage.csv  stats_verify.c  stats_verify.h  tmb.go  tmb.py  utils.c  utils.h
tmb-server/gpu-utilization/: utils.c  utils.h
tmb-server/powerdraw/: utils.c  utils.h
tmb-server/tests/: tmb_test.py
tmb-server/vram/: utils.c  utils.h
utils/: parse_models.c
verifier/: boot_verification.py  full_verify.py  ima_verification.py  parse_boot.py  requirements.txt
verifier/scripts/: audit.rules  audit_log.txt  export_signature.sh  ima-scripts  key_params.yaml  measurements  measurements_ascii.txt  secure_boot  secure_boot.yaml  signing_key.pem  tpm2_pcr.yaml  tpm2_pcr_data  tpm2_pcr_message  tpm2_pcr_signature
verifier/shared/: audit_log.txt  boot_log.yaml  imalog.txt  key_params.yaml  live_pcr.yaml  measurements  measurements_ascii.txt  secure_boot  secure_boot.yaml  signing_key.pem  tpm2_pcr.yaml  tpm2_pcr_data  tpm2_pcr_message  tpm2_pcr_signature
wrapper/: Cargo.toml  Makefile  globals.h  main.c  parse_requests.c  server.c  server.h  wrapper
wrapper/src/: main.rs
