cargo-features = ["edition2024"]

[package]
name = "wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.17"
